objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Event_Recycle_Competitor_Name__c</fullName>
        <label>Event Recycle - Competitor Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Event_Recycle_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Acteva</fullName>
                </value>
                <value>
                    <fullName>Active.com</fullName>
                </value>
                <value>
                    <fullName>Amiando</fullName>
                </value>
                <value>
                    <fullName>Blackbaud/Kintera</fullName>
                </value>
                <value>
                    <fullName>Certain</fullName>
                </value>
                <value>
                    <fullName>Constant Contact</fullName>
                </value>
                <value>
                    <fullName>Etouches</fullName>
                </value>
                <value>
                    <fullName>Eventbrite</fullName>
                </value>
                <value>
                    <fullName>Event Rebels</fullName>
                </value>
                <value>
                    <fullName>EventsForce</fullName>
                </value>
                <value>
                    <fullName>Regonline</fullName>
                </value>
                <value>
                    <fullName>Signup4</fullName>
                </value>
                <value>
                    <fullName>StarCite</fullName>
                </value>
                <value>
                    <fullName>Thriva</fullName>
                </value>
                <value>
                    <fullName>Ungerboeck</fullName>
                </value>
                <value>
                    <fullName>Wild Apricot</fullName>
                </value>
                <value>
                    <fullName>Other (-Enter Details-)</fullName>
                </value>
                <value>
                    <fullName>EventsAIR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Recycle_Reason__c</fullName>
        <label>Event Recycle/Trash Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Event_Lead_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Already a Client</fullName>
                </value>
                <value>
                    <fullName>Bad Contact Info</fullName>
                </value>
                <value>
                    <fullName>Needs Additional Features (-Enter Details-)</fullName>
                </value>
                <value>
                    <fullName>No Events</fullName>
                </value>
                <value>
                    <fullName>No Longer There</fullName>
                </value>
                <value>
                    <fullName>Not a fit/Joker</fullName>
                </value>
                <value>
                    <fullName>Not enough Budget</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Not ready to Buy</fullName>
                </value>
                <value>
                    <fullName>Outsources Registration</fullName>
                </value>
                <value>
                    <fullName>Revived</fullName>
                </value>
                <value>
                    <fullName>Sales Rejected</fullName>
                </value>
                <value>
                    <fullName>Too Small (Events/Reg)</fullName>
                </value>
                <value>
                    <fullName>Unresponsive</fullName>
                </value>
                <value>
                    <fullName>Using a Competitor (-Specify Competitor Name-)</fullName>
                </value>
                <value>
                    <fullName>Using an In-house System</fullName>
                </value>
                <value>
                    <fullName>Working better POC</fullName>
                </value>
                <value>
                    <fullName>Wrong POC</fullName>
                </value>
                <value>
                    <fullName>Other (-Enter Details-)</fullName>
                </value>
                <value>
                    <fullName>CrowdTorch Quick</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Team__c</fullName>
        <formula>Case( Lead_Owner_for_Event_Campaign__c , "Lacey Campbell", "3 Team Campbell","Ashley Bubel","3 Team Campbell","Jaime Blair","2 Team Conrad","Matthew Conrad","2 Team Conrad","Dustin Hurst","2 Team Conrad","Andy Komandur","2 Int. Team J Singh","Nick Sharma","2 Int. Team J Singh","Jordan Singh","2 Int. Team J Singh","Kevin Singh","1 Int. Team K Singh","Natasha Sachdeva","1 Int. Team K Singh","Vince Chhabra","1 Int. Team K Singh","Vick Gandhi","1 Int. Team Kataria","Will Kataria","1 Int. Team Kataria","Richard Kelsey","3 Team Kelsey","Chris Kearney","3 Team Kelsey","Austen Steele","3 Team Kelsey","Jim McDade","2 Team McDade","Jennifer Libbares","2 Team McDade","Craig Robbins","2 Team McDade","Ashley Carleton","1 Team Nassiri","Nick Nassiri","1 Team Nassiri","Katie Budd","1 Team Nassiri","Jen Balest","1 Team Nassiri","James Brixius","2 Team Pirkle","Brian Pirkle","2 Team Pirkle","Tim Sutter","2 Team Pirkle","Alex Rolfe","1 Team Rolfe","Ryan O'Connell","1 Team Rolfe","William Morse","1 Team Rolfe","Steven Bates","1 Team Rolfe","Jonathan Rouhafzai","1 Team Rouhafzai","David Abelman","1 Team Rouhafzai","Leslie Alpert","1 Team Rouhafzai","Mark Nelson","1 Team Rouhafzai","Brittany Spano","3 Team Spano","Robert Cavalieri","3 Team Spano","Emily Shapiro","3 Team Spano","Jack Ukil","1 Int. Team Ukil","Ken Ahuja","1 Int. Team Ukil","Zain Chandan","1 Int. Team Ukil","Peter Kaandorp","1 Int. Team Kaandorp","Graham Beale","1 Int. Team G Beale","Robert Vignali","3 Team Vignali","Adam Laufman","3 Team Vignali","John Fiske","3 Team Vignali","Camille Wingo","3 Team Wingo","Andy Rouhafzai","3 Team Wingo","Katie Berkel","3 Team Wingo",
"None")</formula>
        <label>Event Team (Lead Status)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventsperYear__c</fullName>
        <label>Events per Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I currently have no events planned</fullName>
                </value>
                <value>
                    <fullName>1 event</fullName>
                </value>
                <value>
                    <fullName>2-5 events</fullName>
                </value>
                <value>
                    <fullName>6-10 events</fullName>
                </value>
                <value>
                    <fullName>11-20 events</fullName>
                </value>
                <value>
                    <fullName>21-50 events</fullName>
                </value>
                <value>
                    <fullName>51-100 events</fullName>
                </value>
                <value>
                    <fullName>Over 100 events</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ever_Used_Mobile_App_CC__c</fullName>
        <inlineHelpText>Have you ever used a mobile app at an event?</inlineHelpText>
        <label>Ever Used Mobile App? (CC)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No, I have never used a mobile event app</fullName>
                </value>
                <value>
                    <fullName>Yes, at an event I attended</fullName>
                </value>
                <value>
                    <fullName>Yes, at one of my events</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FT_Sign_Up__c</fullName>
        <description>Date the individual Signed Free Trial</description>
        <label>FT Sign Up Date (Inquisium)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Firmographic_Score__c</fullName>
        <description># 11344230</description>
        <label>Firmographic Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form_Submitted_Most_Recent__c</fullName>
        <description>This is being used in Cast Iron Integration, exclude from field purging exercise</description>
        <label>Form Submitted Most Recent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_Planner_A_C_new__c</fullName>
        <description>Would you like to receive a complimentary account for Cvent's Supplier Network and eRFP Software tool?</description>
        <label>Free Planner A/C</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Already have CSN Planner account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GUI_ID__c</fullName>
        <label>GUI ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_Breakouts_CC__c</fullName>
        <inlineHelpText>Do your events have any breakout sessions?</inlineHelpText>
        <label>Have Breakouts? (CC)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hospitality_solutions_s_of_interest__c</fullName>
        <label>Hospitality solutions(s) of interest?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Guest Feedback</fullName>
                </value>
                <value>
                    <fullName>Group Business Feedback</fullName>
                </value>
                <value>
                    <fullName>Employee Feedback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implicit_OptIn__c</fullName>
        <label>Implicit OptIn</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquisium_Lead_Status__c</fullName>
        <label>Inquisium Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Suspect</fullName>
                </value>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
                <value>
                    <fullName>Marketing Qualified</fullName>
                </value>
                <value>
                    <fullName>Marketing Researched</fullName>
                </value>
                <value>
                    <fullName>Sales Accepted</fullName>
                </value>
                <value>
                    <fullName>Sales Generated</fullName>
                </value>
                <value>
                    <fullName>Recycle</fullName>
                </value>
                <value>
                    <fullName>Trash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inquisium_Profile_Completeness__c</fullName>
        <formula>Case( 
(IF(Text( of_Employees_in_Organisation__c)="",0,17)+IF(ISNULL( Types_of_Surveys_Eloqua__c ),0,17)+IF(ISBLANK(text(Why_are_you_looking_for_a_survey_tool__c)),0,17)+IF(Text( Job_Rank__c )="",0,17)+IF(Text( Job_Function__c)="",0,17)+IF(Text(Industry)="",0,15)),0,IMAGE("https://cvent--c.na17.content.force.com/servlet/servlet.FileDownload?file=01500000000hiQe","image from Documents tab"),15,IMAGE("https://cvent--c.na17.content.force.com/servlet/servlet.FileDownload?file=01500000000hiQj","image from Documents tab"),17,IMAGE("https://cvent--c.na17.content.force.com/servlet/servlet.FileDownload?file=01500000000hiQo","image from Documents tab"),32,IMAGE("https://cvent--c.na17.content.force.com/servlet/servlet.FileDownload?file=01500000000hiQt","image from Documents tab"),34,IMAGE("https://cvent--c.na17.content.force.com/servlet/servlet.FileDownload?file=01500000000hiQy","image from Documents tab"),49,IMAGE("https://cvent--c.na17.content.force.com/servlet/servlet.FileDownload?file=01500000000hiR3","image from Documents tab"),51,IMAGE("https://cvent--c.na17.content.force.com/servlet/servlet.FileDownload?file=01500000000hiR8","image from Documents tab"),66,IMAGE("https://cvent--c.na17.content.force.com/servlet/servlet.FileDownload?file=01500000000hiRD","image from Documents tab"),68,IMAGE("https://cvent--c.na17.content.force.com/servlet/servlet.FileDownload?file=01500000000hiRI","image from Documents tab"),83,IMAGE("https://cvent--c.na17.content.force.com/servlet/servlet.FileDownload?file=01500000000hiRN","image from Documents tab"),85,IMAGE("https://cvent--c.na17.content.force.com/servlet/servlet.FileDownload?file=01500000000hiRS","image from Documents tab"),100,IMAGE("https://cvent--c.na17.content.force.com/servlet/servlet.FileDownload?file=01500000000hiRX","image from Documents tab"),"0")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inquisium Profile Completeness</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_GDPR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is GDPR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Experience</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Insight</fullName>
                </value>
                <value>
                    <fullName>Loyalty</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Officer</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Rank__c</fullName>
        <label>Job Rank</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Below Manager</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>VP</fullName>
                </value>
                <value>
                    <fullName>Officer</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Planner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lanyon_Migrated_ID__c</fullName>
        <externalId>true</externalId>
        <label>Lanyon Migrated ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lead_18_digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Lead 18 digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_for_Event_Campaign__c</fullName>
        <label>Lead Owner for Event Campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status_Reason_Survey__c</fullName>
        <label>Lead Status Reason (Inquisium)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Contact Yet</fullName>
                    <default>true</default>
                    <label>No Contact Yet</label>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Unresponsive (5 contact attempts)</fullName>
                </value>
                <value>
                    <fullName>Bad Contact Info</fullName>
                </value>
                <value>
                    <fullName>No survey initiatives</fullName>
                </value>
                <value>
                    <fullName>Not Interested - Price</fullName>
                </value>
                <value>
                    <fullName>Not Interested - No Surveys</fullName>
                </value>
                <value>
                    <fullName>Not Interested - Happy with Current System</fullName>
                </value>
                <value>
                    <fullName>Not Interested - Referred to best POC</fullName>
                </value>
                <value>
                    <fullName>Not Interested - Other</fullName>
                </value>
                <value>
                    <fullName>Not interesed in Attending</fullName>
                </value>
                <value>
                    <fullName>Follow-up Required</fullName>
                </value>
                <value>
                    <fullName>Future Interest - 60-90 Days</fullName>
                </value>
                <value>
                    <fullName>Future Interest - 3-6 Months</fullName>
                </value>
                <value>
                    <fullName>Future Interest - 6-12 Months</fullName>
                </value>
                <value>
                    <fullName>Future Interest - 1 Year +</fullName>
                </value>
                <value>
                    <fullName>Set for Public Demo</fullName>
                </value>
                <value>
                    <fullName>Set for Private Demo</fullName>
                </value>
                <value>
                    <fullName>Set for Survey Seminar</fullName>
                </value>
                <value>
                    <fullName>Attended Public Demo</fullName>
                </value>
                <value>
                    <fullName>Attended Private Demo</fullName>
                </value>
                <value>
                    <fullName>Attended No Active Follow-up</fullName>
                </value>
                <value>
                    <fullName>Attended Demo Purchased</fullName>
                </value>
                <value>
                    <fullName>Attended Demo Not Buying</fullName>
                </value>
                <value>
                    <fullName>Attended Survey Seminar</fullName>
                </value>
                <value>
                    <fullName>Attended - No Contact Yet</fullName>
                </value>
                <value>
                    <fullName>Attended - Unresponsive (5 Contact attempts)</fullName>
                </value>
                <value>
                    <fullName>Attended - Working</fullName>
                </value>
                <value>
                    <fullName>Attended - Interested (Converted to Opportunity)</fullName>
                </value>
                <value>
                    <fullName>Attended - Not Interested (Other)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leadspace_Uber_Score__c</fullName>
        <label>Leadspace Uber Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Marketing_Suspended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Suspended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketo_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be true for all marketo active leads.</description>
        <label>Marketo Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mass_Conversion_Mapping__c</fullName>
        <label>Mass Conversion Mapping</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Lead__c</fullName>
        <formula>HYPERLINK("https://ssl.salesforce.com/lead/leadmergewizard.jsp?retURL=%2F"&amp; Id &amp; "&amp;id="&amp; Id, "Merge Lead")</formula>
        <label>Merge Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mktg_Lead_Source__c</fullName>
        <label>Mktg: Lead Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mktg_MMA__c</fullName>
        <label>Mktg: MMA</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Apps_Lead_Status__c</fullName>
        <label>Mobile Apps Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Pronunciation__c</fullName>
        <label>Name Pronunciation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Lead_No_of_Days__c</fullName>
        <label>(A) New Lead(No. of Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Created_No_of_Days__c</fullName>
        <label>(G) Opportunity Created(No. of Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OptIn_Confirmation_IP__c</fullName>
        <label>OptIn Confirmation IP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OptIn_Content_CrowdTorch_Quick__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OptIn Content CrowdTorch Quick</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_Content_Cvent_Connect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OptIn Content Cvent Connect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_Content_EMI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OptIn Content EMI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_Content_Educational__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OptIn Content Educational</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_Content_Event_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OptIn Content Event Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_Content_Industry_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OptIn Content Industry Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_Content_Live_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OptIn Content Live Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_Content_Mobile_Apps_B2B__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OptIn Content Mobile Apps B2B</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_Content_Mobile_Apps_B2C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OptIn Content Mobile Apps B2C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_Content_Partners__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OptIn Content Partners</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_Content_Product_Demos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OptIn Content Product Demos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_Content_Product_Updates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OptIn Content Product Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_Content_Promos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OptIn Content Promos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_Content_Strategic_Meetings_Managem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OptIn Content Strategic Meetings Managem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_Content_Supplier_Network__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OptIn Content Supplier Network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_Content_Ticketing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OptIn Content Ticketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_Content_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OptIn Content Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_Content_Web_Surveys__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OptIn Content Web Surveys</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_Customer_Best_Practices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OptIn Customer Best Practices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_Customer_Special_Offers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OptIn Customer Special Offers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_Customer_User_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OptIn Customer User Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_Explicit_Date__c</fullName>
        <label>OptIn Explicit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OptIn_Implicit_Date__c</fullName>
        <label>OptIn Implicit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OptIn_Newsletter_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OptIn Newsletter Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_Newsletter_Enterprise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OptIn Newsletter Enterprise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_Newsletter_Group_Business_Now__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OptIn Newsletter Group Business Now</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_Newsletter_Hospitality_Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OptIn Newsletter Hospitality Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_Newsletter_Meetings_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OptIn Newsletter Meetings &amp; Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptIn_Newsletter_Web_Surveys_101__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OptIn Newsletter Web Surveys 101</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
        <description>Alternate Phone</description>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PA_Rep__c</fullName>
        <label>PA Rep</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Volume__c</fullName>
        <description>This is being used in Cast Iron Integration, exclude from field purging exercise</description>
        <label>Participant Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Partner Contact)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <label>Phone Ext.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planner_Behavior_Score__c</fullName>
        <label>Planner Behavior Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planner_Combined_Score__c</fullName>
        <formula>Planner_Behavior_Score__c +  Planner_Demographic_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planner Combined Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planner_Demographic_Score__c</fullName>
        <label>Planner Demographic Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricing_No_of_days__c</fullName>
        <label>(F) Pricing(No. of days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Lead_Status_Survey__c</fullName>
        <formula>CASE(  Lead_Status_Reason_Survey__c  , "No Contact Yet","No Contact Yet","Not Interested - No Surveys","Unqualified","Not Interested - Price","Unqualified","Unresponsive (5 contact attempts)","Unqualified","Bad Contact Info","Unqualified","Not Interested - Happy with Current System","Unqualified","Not Interested - Other","Unqualified","Not Interested - Referred to best POC","Unqualified","No survey initiatives","Unqualified","Set for Public Demo","Qualified","Set for Survey Seminar","Qualified","Set for Private Demo","Qualified","Attended Public Demo","Qualified","Attended Private Demo","Qualified","Attended Survey Seminar","Attended - Qualified","Attended - No Contact Yet","Attended - Unqalified","Attended - Unresponsive (5 Contact attempts)","Attended - Unqalified","Attended - Working","Attended - Working","Attended - Interested (Converted to Opportunity)","Attended - Qualified","Attended - Not Interested (Other)","Attended - Unqalified","Attended - Not Interested (Not a Good Fit)","Attended - Unqalified","Attended - Not Interested (Wrong POC)","Attended - Unqalified","Attended - Not Interested (Price)","Attended - Unqalified","Attended - Not Interested (Inadequate Feature Set)","Attended - Unqalified","Attended - Not Interested (Happy with Current System)","Attended - Unqalified","Attended - Not Interested (Went with Competitor)","Attended - Unqalified","Attended - Future Interest (60-90 Days)","Attended - Qualified","Attended - Future Interest (3-6 Months)","Attended - Qualified","Attended - Future Interest (6-12 Months)","Attended - Qualified","Attended - Future Interest (1 year +)","Attended - Qualified","Attended Demo Purchased","Qualified","Attended Demo Not Buying","Qualified","Future Interest - 60-90 Days","Qualified","Future Interest - 3-6 Months","Qualified","Future Interest - 6-12 Months","Qualified","Future Interest - 1 Year +","Qualified","Working","Working","Not interesed in Attending","Unqualified","Follow-up Required","Working","Attended No Active Follow-up","Qualified","Attended - Not Interested (No Surveys)","Unqualified","")</formula>
        <label>Primary Lead Status (Inquisium)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Product_Interest__c</fullName>
        <description>This is being used in Cast Iron Integration, exclude from field purging exercise</description>
        <label>Primary Product Interest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>